Cycles plane Emission gradient "clipping" #117771

Closed
opened 2024-02-02 22:50:19 +01:00 by Emre Can Özcan · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: (newest version of Blender that worked as expected)

Short description of error
I have never encountered this kind of light behavior before, I have used this setup multiple times and never had something like this

Exact steps for others to reproduce the error
Open the attached Blend file
when using cycles the light behaves very strangely, like there is a cutoff by a set distance on the X-axis

Thank you in advance Blender Developers & anybody involved I truly appreciate the hard work and efforts!
(excuse me if there is any obvious mistake from my side or a setting that I overlooked)

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: (newest version of Blender that worked as expected) **Short description of error** I have never encountered this kind of light behavior before, I have used this setup multiple times and never had something like this **Exact steps for others to reproduce the error** Open the attached Blend file when using cycles the light behaves very strangely, like there is a cutoff by a set distance on the X-axis Thank you in advance Blender Developers & anybody involved I truly appreciate the hard work and efforts! (excuse me if there is any obvious mistake from my side or a setting that I overlooked)
Emre Can Özcan added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-02 22:50:20 +01:00
Emre Can Özcan changed title from Plane Gradient Emission Clipping to Cycles plane Emission gradient "clipping" 2024-02-02 22:51:02 +01:00
Member

I can confirm that emissive planes are rendering incorrectly in the attached file.

Running some quick tests, it seems this issue was introduced in Blender 3.3. However a similar issue can still be reproduced back to Blender 2.80 and probably earlier. I'm not sure if this "similar" issue is the same one. So I will do further investigating before reporting on it.

I can confirm that emissive planes are rendering incorrectly in the attached file. Running some quick tests, it seems this issue was introduced in Blender 3.3. However a similar issue can still be reproduced back to Blender 2.80 and probably earlier. I'm not sure if this "similar" issue is the same one. So I will do further investigating before reporting on it.
Alaska added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-02-03 01:22:41 +01:00
Member

It seems like the issue was introduced with 38af5b0501

CC @brecht


Just for reference, here's what I observed:

  1. The issue only impacts Next Event Estimation. See images below.
  2. The issue seems to be that within a region around a triangle, the correct (or close to correct) co-ordinate is sampled on the triangle. But outside that region, incorrect points are sampled on the triangle. I haven't looked into it to see if it's a UV sampling or geometry sampling issue.
  3. The size of the region that renders correctly is determined by the size of the triangle. A larger triange has a larger area that renders correctly, while a smaller triangle has a smaller regeion that renders correctly.
Next Event Estimation Only Forward Sampling Only
NEE.jpg Forward.jpg
It seems like the issue was introduced with 38af5b0501005d8ee84a59f027417bf6a31fcc5e CC @brecht --- Just for reference, here's what I observed: 1. The issue only impacts Next Event Estimation. See images below. 2. The issue seems to be that within a region around a triangle, the correct (or close to correct) co-ordinate is sampled on the triangle. But outside that region, incorrect points are sampled on the triangle. I haven't looked into it to see if it's a UV sampling or geometry sampling issue. 3. The size of the region that renders correctly is determined by the size of the triangle. A larger triange has a larger area that renders correctly, while a smaller triangle has a smaller regeion that renders correctly. |Next Event Estimation Only|Forward Sampling Only| |-|-| |![NEE.jpg](/attachments/878f576c-3c8c-4c80-ac5b-e24f5bbe66e9)|![Forward.jpg](/attachments/48f7e335-de02-4376-ae26-a6f6d59d1b6f)|
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-05 13:57:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117771
No description provided.