Fix #117771: Incorrect Cycles texture position on emissive triangles

Pull Request: https://projects.blender.org/blender/blender/pulls/117801